--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -6,10 +6,33 @@ img {
   width: 100px;
   height: 100px;
 }
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  
+}
+
+.infobox-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 52px
+}
+
+.infobox {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
