Add solution to exercise 05
This exercise was done in a way that is much less "lean" than the
recommended approach in the solution, I'm adding because it *solves*
the criteria described in the self-check, but it's not an optimal
solution.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,16 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px
+}
+
+.content {
+  display: flex;
+  gap:16px;
+}
+
+.content-left {
+  display: flex;
 }
 
 .icon {
@@ -33,6 +43,23 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.content-right {
+ display: flex;
+ flex-direction: column;
+ gap: 12px;
+}
+
+.content-right-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.header {
+  font-weight: 700;
+  font-size: large;
 }
 
 .close-button {
